added code in main-get-stock-data and chart.html to allow the price chart to show up

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -5,7 +5,7 @@
   <h1 class="heading">{{ tick }}</h1>
   <p class="description">These are my all time favorite movies.</p>
 
-  <img src="/plot.png" alt="my plot">
+  <img src="{{ plot }}" alt="my plot">
 
 </div>
 
