--- a/templates/chart.html
+++ b/templates/chart.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 <div class="container">
-  <h1 class="heading">{{ tick }}</h1>
-  <p class="description">These are my all time favorite movies.</p>
+  <h1 class="heading">{{ tick.upper() }}</h1>
+
 
   <img src="{{ plot }}" alt="my plot">
+  <br>
+  <a href="{{ url_for('get_stock_data') }}" class="button">Back to Stock Search Page</a>
 
 </div>
 
