clean up old html references

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,11 @@
 {% extends 'bootstrap/base.html' %}
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" dir="ltr">-->
-<!--  <head>-->
-<!--    <meta charset="utf-8">-->
-<!--    <title>Options Calculator</title>-->
-<!--  </head>-->
-<!--  <body>-->
-<!--    <h1>Hello!</h1>-->
-<!--  </body>-->
-<!--</html>-->
 
 
 {% block content %}
 <div class="container">
-  <h1 class="heading">My Top 10 Movies</h1>
-  <p class="description">These are my all time favorite movies.</p>
+  <h1 class="heading">Stock Returns Application</h1>
+  <p class="description">This application will return charts displaying price action and distribution of returns
+  over user specified timeframe.</p>
 
 
 </div>
