--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="content">
-    <h1 class="heading">Add a Movie</h1>
+    <h1 class="heading">Search for Stock with Valid Ticker Symbol</h1>
 
     {{ wtf.quick_form(form, novalidate=True) }}
 
