--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,4 +1,8 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
+
+
+
+{% block title %}Charting Page{% endblock %}
 
 {% block content %}
 <div class="container">
