--- a/templates/chart.html
+++ b/templates/chart.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-  <h1 class="heading">{{ tick.upper() }}</h1>
+  <h1 class="heading">{{ tick.upper() }}: Current Price is {{ cur_price }}</h1>
 
 
   <img src="{{ plot }}" alt="my plot">
