--- a/templates/chart.html
+++ b/templates/chart.html
@@ -19,7 +19,7 @@
   <br>
   <p>The Suggest Short Put Srike Price is approx. ${{ "%.0f" | format((1 - (-1*stats.loc['nf_conf']['stats'])) * cur_price) }} </p>
   <br>
-  <a href="{{ url_for('get_stock_data') }}" class="button">Back to Stock Search Page</a>
+  <a href="{{ url_for('home') }}" class="button">Back to Stock Search Page</a>
 
 </div>
 
