--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,17 @@
 
 {% block styles %}
 {{super()}}
-<link rel="stylesheet"
-      href="static/css/style1.css">
+  <!--  Local CSS -->
+  <link rel="stylesheet" href="static/css/style1.css">
+
+  <!-- Links to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Merriweather&family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome Link -->
+  <script src="https://kit.fontawesome.com/b54dfe251e.js" crossorigin="anonymous"></script>
+
 {% endblock %}
 
 
