add blank blog, login pages, update API keys to env variables, add margin to stock form

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -2,7 +2,7 @@
 
 
 
-{% block title %}Charting Page{% endblock %}
+{% block title %}Charts and Stats{% endblock %}
 
 {% block content %}
 <div class="chart-output">
