--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,14 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('home') }}">Home</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('blog') }}">Blog</a>
+          </li>
         </ul>
       </div>
     </div>
