wpi background image

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:50px">Stock Returns Application</h1>
+    <h1>Stock Returns Application</h1>
     <h3>This application will return charts displaying price action and distribution of returns
             over user specified timeframe</h3>
   </div>
