--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -1,66 +1,62 @@
-/*
-fonts:
-font-family: 'Cinzel', serif;
-font-family: 'Sawarabi Mincho', serif;
-*/
-
 body {
     font-family: 'Sawarabi Mincho', serif;
     text-align: center;
     background-color: #d1d1d1;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Sawarabi Mincho', serif;
+h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
-h3 {
-  font-size: 1.5rem;
+.hero {
+  background-attachment: scroll;
+  background-image: url("../images/bull.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  isolation: isolate;
+  position: relative;
+  padding: 200px 0 200px;
 }
 
-p {
-  color: #8f8f8f;
+.hero::after {
+  content:'';
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  background-color: #212529;
+  opacity: 0.5;
 }
 
-a {
-  color: #8f8f8f;
-  font-size: 1.25rem;
+.page-heading {
+  color: white;
+  font-family: 'Cinzel', serif;
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 0;
 }
 
-
-.form-label {
-    font-size: 1.5rem;
+.subheading {
+  color: white;
+  font-family: 'Cinzel', serif;
+  font-size:24px;
+  font-weight: 300;
+  line-height: 1.1;
+  margin: 0 25%;
 }
 
-.form-control {
-    font-size: 1.25rem;
- }
+.input-form-all {
+  margin: 50px 0;
+}
 
  .input-form {
-    margin: 0 25% 0 25%;
+   margin: 0 30%;
  }
 
- .heading {
-    padding:10px 0;
+ .section-heading {
+   color: black;
+   font-weight: bold;
+   font-size: 2.5rem;
+   line-height: 1.2;
+
  }
-
-.masthead {
-    height: 100px;
-}
-
-.hero-image {
-  /* background-image: url('https://images.unsplash.com/photo-1439434768192-c60615c1b3c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8c3RvY2slMjBtYXJrZXR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60'); */
-  height: 500px;
-
-  background-color: #868e96;
-}
-
-/* .hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
-} */
