--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <input class="form-control" type="text" name="ret_period" placeholder="Example: 25">
       </div>
       <div class="mb-3">
-        <button type="submit" class="btn btn-lg btn-outline-dark" id="sendMessageButton">Get Data</button>
+        <button type="submit" class="btn btn-lg btn-outline-dark" id="getStockDataButton">Get Data</button>
       </div>
     </form>
   </div>
